[package]
name = "frontier-template-runtime"
version = "0.0.0"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/substrate-developer-hub/frontier-node-template/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "1.0.0", default-features = false, features = [
	"derive",
] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

[dependencies.pallet-template]
path = "../pallets/template"
default-features = false

[dependencies.frame-executive]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.pallet-ethereum]
default-features = false
git = "https://github.com/paritytech/frontier.git"

[dependencies.pallet-evm]
default-features = false
git = "https://github.com/paritytech/frontier.git"

[dependencies.pallet-dynamic-fee]
default-features = false
git = "https://github.com/paritytech/frontier.git"

[dependencies.pallet-evm-precompile-simple]
default-features = false
git = "https://github.com/paritytech/frontier.git"

[dependencies.pallet-evm-precompile-sha3fips]
default-features = false
git = "https://github.com/paritytech/frontier.git"

[dependencies.pallet-evm-precompile-modexp]
default-features = false
git = "https://github.com/paritytech/frontier.git"

[dependencies.pallet-aura]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.pallet-balances]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.pallet-grandpa]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.pallet-sudo]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.pallet-timestamp]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.pallet-transaction-payment]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.pallet-base-fee]
default-features = false
git = "https://github.com/paritytech/frontier.git"

[dependencies.sp-api]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.sp-block-builder]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.sp-consensus-aura]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.sp-inherents]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.sp-offchain]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.sp-session]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.sp-transaction-pool]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.sp-version]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.fp-rpc]
default-features = false
git = "https://github.com/paritytech/frontier.git"

[dependencies.fp-self-contained]
default-features = false
git = "https://github.com/paritytech/frontier.git"

[dependencies.frame-benchmarking]
git = "https://github.com/paritytech/substrate.git"
default-features = false
optional = true

[dependencies.frame-system-benchmarking]
git = "https://github.com/paritytech/substrate.git"
default-features = false
optional = true

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate" }

[features]
default = ["std", "aura"]
aura = []
manual-seal = []
std = [
	"codec/std",
	"serde",

	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"fp-rpc/std",
	"fp-self-contained/std",

	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-dynamic-fee/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-base-fee/std",

	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-benchmarking/std",
	"frame-system-benchmarking/std",

	"scale-info/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"pallet-ethereum/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
]
