[package]
name = "pallet-template"
version = "4.0.0-dev"
description = "FRAME pallet template for defining custom runtime logic."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2018"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "1.0.0", default-features = false, features = [
	"derive",
] }

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.frame-benchmarking]
default-features = false
optional = true
git = "https://github.com/paritytech/substrate.git"

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dev-dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]

try-runtime = ["frame-support/try-runtime"]
